--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,24 @@
-#--Main----#
-pyrofork
+#---Main----#
+pyrogram
 tgcrypto
 aiofiles     
 aiohttp
 requests
-bs4
+cinemagoer
 
 #---database---#
+motor
 pymongo
 dnspython
 marshmallow
 umongo
-motor
-
-#---imdb---#
-cinemagoer==2023.5.1
 
 #---others----#
-opencv-python-headless==4.7.0.68
-python-dotenv==0.21.1
-Pillow==10.2.0
-psutil==5.9.4
-NumPy==1.26.2
-wheel
+opencv-python-headless
+python-dotenv
+Pillow
+psutil
 ujson
-wget
 pytz
+wget
+wheel
