--- a/logging.conf
+++ b/logging.conf
@@ -2,32 +2,27 @@
 keys=root
 
 [handlers]
-keys=consoleHandler,fileHandler
+keys=consoleHandler, fileHandler
 
 [formatters]
-keys=consoleFormatter,fileFormatter
+keys=defaultFormatter
 
 [logger_root]
-level=DEBUG
-handlers=consoleHandler,fileHandler
+level=INFO
+handlers=consoleHandler, fileHandler
 
 [handler_consoleHandler]
 class=StreamHandler
 level=INFO
-formatter=consoleFormatter
+formatter=defaultFormatter
 args=(sys.stdout,)
 
 [handler_fileHandler]
 class=FileHandler
 level=INFO
-formatter=fileFormatter
-args=('BotLog.txt','w',)
+formatter=defaultFormatter
+args=('BotLog.txt', 'w')
 
-[formatter_consoleFormatter]
-format=%(asctime)s - %(lineno)d - %(name)s - %(module)s - %(levelname)s - %(message)s
-datefmt=%I:%M:%S %p
-
-[formatter_fileFormatter]
-format=[%(asctime)s:%(name)s:%(lineno)d:%(levelname)s] %(message)s
-datefmt=%m/%d/%Y %I:%M:%S %p
-                                         
+[formatter_defaultFormatter]
+format=%(asctime)s - %(levelname)s - %(name)s - %(lineno)d - %(message)s
+datefmt=%d-%m-%Y %I:%M:%S %p
